--- a/src/reset.css
+++ b/src/reset.css
@@ -21,6 +21,7 @@ html {
 
 body {
   text-align: left;
+  margin: 0;
 }
 
 /*
@@ -29,6 +30,11 @@ body {
  */
 li {
   list-style-type: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 ol li,
