--- a/src/shared/components/SearchBar.module.scss
+++ b/src/shared/components/SearchBar.module.scss
@@ -1,7 +1,7 @@
 .searchInputWrapper {
     display: flex;
-    border: 1px solid #D9D9D9;
-    border-radius: 8px;
+    border: 1px solid var(--primary-color);
+    border-radius: var(--border-radius);
     padding: 5px;
     width: 100%;
     max-width: 400px;
@@ -23,9 +23,9 @@
     }
 
     .selectedItems {
-        background-color: #D9D9D9;
-        padding: 5px 5px 5px 10px;
-        border-radius: 8px;
+        background-color: var(--primary-color);
+        padding: var(--spacing-xs) var(--spacing-sm);
+        border-radius: var(--border-radius);
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -36,7 +36,8 @@
             background-color: transparent;
             border: none;
             cursor: pointer;
-            color: #868686;
+            color: var(--secondary-color);
+            padding: 0;
         }
     }
 }
@@ -44,8 +45,8 @@
 
 .searchItems {
     list-style-type: none;
-    background-color: #f2f2f2;
-    border-bottom: 1px solid #e1e1e1;
+    background-color: var(--background-color-light);
+    border-bottom: 1px solid var(--border-color-light);
 
     .searchItemsButton {
         padding: 20px;
