--- a/src/design-system/styles/_variables.scss
+++ b/src/design-system/styles/_variables.scss
@@ -4,6 +4,7 @@
     --secondary-color: #868686;
     --background-color-light: #f2f2f2;
     --border-color-light: #e1e1e1;
+    --text-color: #353535;
 
     /* Spacing */
     --spacing-xs: 5px;
