--- a/src/modules/users/components/UsersList.module.scss
+++ b/src/modules/users/components/UsersList.module.scss
@@ -7,7 +7,7 @@
     .listItemImage {
         width: 48px;
         height: 48px;
-        border-radius: 4px;
+        border-radius: var(--border-radius-sm);
         background-color: var(--primary-color);
     }
 
