feat(search-bar): add no results item

--- a/src/design-system/styles/_variables.scss
+++ b/src/design-system/styles/_variables.scss
@@ -5,6 +5,7 @@
     --background-color-light: #f2f2f2;
     --border-color-light: #e1e1e1;
     --text-color: #353535;
+    --text-color-light: #7D7D7D;
 
     /* Spacing */
     --spacing-xs: 5px;
